mini update, i'd know